update stable to 3.0.6, see http://hub.jmonkeyengine.org/forum/topic/candidate-changes-for-3-0-6/
git-svn-id: https://jmonkeyengine.googlecode.com/svn/branches/3.0final@11112 75d07b2b-3a1a-0410-a2c5-0572b91ccdca